--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -1,7 +1,7 @@
 on:
   push:
     paths:
-      - '.github/2022-12-01.yml'
+      - '.github/workflows/2022-12-01.yml'
       - '2022-12-01/**'
 jobs:
   build:
