--- a/2022-12-01/.github/workflows/workflow.yml
+++ b/2022-12-01/.github/workflows/workflow.yml
@@ -1,8 +1,4 @@
-on:
-  push:
-    paths:
-      - '.github/workflows/2022-12-01.yml'
-      - '2022-12-01/**'
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
