Specify gradle version

--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -16,4 +16,6 @@ jobs:
           distribution: temurin
           java-version-file: 2022-12-01/.java-version
       - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: wrapper
       - run: ./gradlew build
