--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -15,8 +15,12 @@ jobs:
         with:
           distribution: temurin
           java-version-file: 2022-12-01/.java-version
+      - uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: wrapper
           cache-read-only: false
-      - run: ./gradlew build
+      - run: ./gradlew jib
