--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -15,6 +15,32 @@ jobs:
         with:
           distribution: temurin
           java-version-file: 2022-12-01/.java-version
+      - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: wrapper
+          cache-read-only: false
+          arguments: build
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version-file: 2022-12-01/.java-version
+      - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: wrapper
+          cache-read-only: false
+          arguments: test
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version-file: 2022-12-01/.java-version
       - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -23,4 +49,4 @@ jobs:
         with:
           gradle-version: wrapper
           cache-read-only: false
-      - run: ./gradlew jib
+          arguments: jib
