--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -7,46 +7,19 @@ on:
       - '.github/workflows/2022-12-01.yml'
       - '2022-12-01/**'
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version-file: 2022-12-01/.java-version
-      - uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: wrapper
-          cache-read-only: false
-      - run: ./gradlew build
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version-file: 2022-12-01/.java-version
-      - uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: wrapper
-          cache-read-only: false
-      - run: ./gradlew test
   publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version-file: 2022-12-01/.java-version
+      - uses: docker/setub-buildx-action@v2
       - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: gradle/gradle-build-action@v2
+      - uses: docker/build-push-action@v3
         with:
-          gradle-version: wrapper
-          cache-read-only: false
-      - run: ./gradlew jib
+          context: 2022-12-01
+          push: true
+          tags: andrewshawcare/advent-of-code.2022-12-01
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
