Change to same alpine image for both stages of Docker build

--- a/2022-12-01/Dockerfile
+++ b/2022-12-01/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-jdk as build
+FROM eclipse-temurin:17-jdk-alpine as build
 WORKDIR /app
 COPY ./gradle ./gradle
 COPY gradlew build.gradle.kts settings.gradle.kts ./
@@ -7,7 +7,7 @@ COPY . .
 RUN ./gradlew --no-daemon build
 ENTRYPOINT [ "./gradlew" ]
 
-FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:17-jdk-alpine
 COPY --from=build /app/build/libs/2022-12-01.jar ./
 ENTRYPOINT [ "java" ]
 CMD [ "-jar", "2022-12-01.jar" ]
