--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -19,7 +19,13 @@ jobs:
       - uses: docker/build-push-action@v3
         with:
           context: 2022-12-01
-          push: true
+          push: false
           tags: andrewshawcare/advent-of-code.2022-12-01
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - # Temporary fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
