--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -6,26 +6,4 @@ on:
     paths:
       - '.github/workflows/2022-12-01.yml'
       - '2022-12-01/**'
-jobs:
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: 2022-12-01
-          push: false
-          tags: andrewshawcare/advent-of-code.2022-12-01
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - # Temporary fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+jobs: []
