--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -16,4 +16,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        run: ./gradlew test
+      - run: ./gradlew test
