--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -11,9 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: ./gradlew build
+      - uses: actions/setup-java@v3
+        with:
+          java-version-file: 2022-12-01/.java-version
+          cache: gradle
+      - run: ./gradlew build --no-daemon
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: ./gradlew test
+      - uses: actions/setup-java@v3
+        with:
+          java-version-file: 2022-12-01/.java-version
+          cache: gradle
+      - run: ./gradlew test --no-daemon
