--- a/.github/workflows/2022-12-01.yml
+++ b/.github/workflows/2022-12-01.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version-file: 2022-12-01/.java-version
           cache: gradle
       - run: ./gradlew build --no-daemon
@@ -22,6 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version-file: 2022-12-01/.java-version
           cache: gradle
       - run: ./gradlew test --no-daemon
